# loc_toolkit

./: batch_translation_trial.py  compare_protected_tokens.py  full_translation_runner.py  incremental_translation_runner.py  loc-toolkit.bat  loc-toolkit.json.example  protected_tokens.py  pyproject.toml  test_batch_translation_trial.py  test_compare_protected_tokens.py  test_protected_tokens.py  test_translation_runners.py  workflow_config.py  workflow_shared.py
loc_toolkit/: __init__.py  cli.py
loc_toolkit/artifacts/: __init__.py  glossary_builder.py  report_writer.py  tm_builder.py
loc_toolkit/config/: __init__.py  defaults.py  loader.py  models.py
loc_toolkit/core/: __init__.py  protected_tokens.py  validator.py  vdf_reader.py  vdf_writer.py
loc_toolkit/generation/: __init__.py  approval.py  models.py  prompts.py
loc_toolkit/workflows/: __init__.py  common.py  full_runner.py  incremental_runner.py  single_file_runner.py
tests/: test_loc_toolkit.py
